protobuf 二进制协议压缩消息体，分层心跳机制（基础心跳 + 动态重试)
